Fix scrollbar

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,115 +1,113 @@
 $textYellow: #f6bb19;
 
 .Instrunction-box {
-  background: linear-gradient(
-      0deg,
-      rgba(246, 187, 25, 0.32),
-      rgba(246, 187, 25, 0.32)
-    ),
-    linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4));
-  border: 1px solid rgba(246, 187, 25, 0.24);
-  padding: 18px 16px 18px 16px;
-  border-radius: 4px;
+    background: linear-gradient(0deg,
+            rgba(246, 187, 25, 0.32),
+            rgba(246, 187, 25, 0.32)),
+        linear-gradient(0deg, rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4));
+    border: 1px solid rgba(246, 187, 25, 0.24);
+    padding: 18px 16px 18px 16px;
+    border-radius: 4px;
 
-  .Instrunction-heading {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    color: $textYellow;
+    .Instrunction-heading {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        color: $textYellow;
 
-    svg,
-    img {
-      font-size: 32px;
+        svg,
+        img {
+            font-size: 32px;
+        }
+
+        span {
+            font-size: 24px;
+            font-weight: 500;
+        }
     }
 
-    span {
-      font-size: 24px;
-      font-weight: 500;
-    }
-  }
+    .Instrunction-listing {
+        padding-top: 8px;
 
-  .Instrunction-listing {
-    padding-top: 8px;
-
-    ul li {
-      list-style: disc inside !important;
-      margin-bottom: 0px;
-      display: list-item;
-      padding-left: 5px;
-      line-height: 30px;
+        ul li {
+            list-style: disc inside !important;
+            margin-bottom: 0px;
+            display: list-item;
+            padding-left: 5px;
+            line-height: 30px;
+        }
     }
-  }
 }
 
 .Warning-box {
-  width: 100%;
-  max-width: 277px;
-  border: 1px solid rgba(250, 217, 124, 1);
-  box-shadow: 0px 2px 4px 0px rgba(246, 187, 25, 0.12);
-  padding: 8px 10px 8px 10px;
+    width: 100%;
+    max-width: 277px;
+    border: 1px solid rgba(250, 217, 124, 1);
+    box-shadow: 0px 2px 4px 0px rgba(246, 187, 25, 0.12);
+    padding: 8px 10px 8px 10px;
 
-  p {
-    margin-bottom: 0px;
-  }
-
-  .icon-bg {
-    background: rgba(246, 187, 25, 0.24);
-    width: 32px;
-    height: 32px;
-    border-radius: 4px;
-    text-align: center;
-
-    svg,
-    img {
-      color: $textYellow;
-      font-size: 16px;
-      font-weight: 500;
+    p {
+        margin-bottom: 0px;
     }
-  }
 
-  .warning-content {
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 17px;
-    color: rgba(66, 71, 77, 0.9) !important;
-  }
+    .icon-bg {
+        background: rgba(246, 187, 25, 0.24);
+        width: 32px;
+        height: 32px;
+        border-radius: 4px;
+        text-align: center;
+
+        svg,
+        img {
+            color: $textYellow;
+            font-size: 16px;
+            font-weight: 500;
+        }
+    }
+
+    .warning-content {
+        font-size: 14px;
+        font-weight: 500;
+        line-height: 17px;
+        color: rgba(66, 71, 77, 0.9) !important;
+    }
 }
 
 .Decisions-box {
-  background: rgba(240, 240, 241, 1);
+    background: rgba(240, 240, 241, 1);
 
-  .Decisions-header {
-    border-bottom: 1px solid #eaeaea;
-    padding: 12px 16px 12px 16px;
+    .Decisions-header {
+        border-bottom: 1px solid #eaeaea;
+        padding: 12px 16px 12px 16px;
 
-    p {
-      margin-bottom: 0px !important;
-      line-height: 25px;
+        p {
+            margin-bottom: 0px !important;
+            line-height: 25px;
+        }
+
+        .heading {
+            font-size: 16px;
+            font-weight: 500;
+
+            svg {
+                color: rgba(170, 182, 193, 1);
+                font-weight: 600;
+            }
+        }
+
+        .details-content {
+            color: rgba(170, 182, 193, 1) !important;
+            font-size: 14px;
+
+            strong {
+                color: #34404cb8 !important;
+            }
+        }
     }
 
-    .heading {
-      font-size: 16px;
-      font-weight: 500;
-
-      svg {
-        color: rgba(170, 182, 193, 1);
-        font-weight: 600;
-      }
+    .form-box {
+        padding: 12px 16px 12px 16px;
     }
-
-    .details-content {
-      color: rgba(170, 182, 193, 1) !important;
-      font-size: 14px;
-
-      strong {
-        color: #34404cb8 !important;
-      }
-    }
-  }
-
-  .form-box {
-    padding: 12px 16px 12px 16px;
-  }
 }
 
 .wp-block-button__link_green {
@@ -210,18 +208,37 @@ $textYellow: #f6bb19;
         position: fixed;
         max-width: 300px;
         background-color: rgb(240, 240, 241);
-        >.form-dashboard-page{
+
+        >.form-dashboard-page {
             height: 100vh;
             background-color: #ffffff;
             overflow-y: auto;
-            >.form-dashboard-inner .form-side-bar{
-               
+            border-right: 1px solid #DCE3E5;
+            >.form-dashboard-inner .form-side-bar {
+                border: none;
                 padding-left: 10px;
             }
         }
     }
+
     >.form-dashboard-page {
         margin-left: 300px;
         flex-grow: 1;
+        height: 100vh;
+        overflow-y: auto;
+
+        &::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $textYellow;
+            border-radius: 6px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #f5c647;
+        }
     }
+
 }
